Implement Leave Duty Screen